fixes for button row styles and alignment

--- a/hourglass_site/static_source/style/components/_buttons.scss
+++ b/hourglass_site/static_source/style/components/_buttons.scss
@@ -59,6 +59,10 @@ input.button-secondary[type="button"] {
     border-color: $color-secondary-dark;
   }
 
+  &:visited {
+    color: $color-white;
+  }
+
   &:focus,
   &.button-focus {
     background-color: $color-secondary-dark;
